src/test/deca/syntax/invalid/invalid-float1.deca
{
    float x = 1e40; // Trop grand pour IEEE-754 simple précision
}